config with ts, devServer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Заявка на покупку авто</title>
 </head>
 <body>
-    <div class="element">1</div>
+    <div id="root"></div>
 </body>
 </html>
