--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <!-- <link type="text/css" href="./styles/styles.css" rel="stylesheet"> -->
+    <link rel="shortcut icon" href="SiteLabel.svg"> 
     <title>Заявка на покупку авто</title>
 </head>
 <body>
